2008-09-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/perl.html: Fix formatting of examples.  Should address
	SourceForge issue [ 2100339 ] "Wrong format in example script on
	web page".

2008-09-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (BenchmarkImageCommand): Restore original
	client name for each loop so that it is not extended further for
	each iteration.

2008-09-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/semaphore.c (UnlockSemaphoreInfo): Decrement lock depth
	under protection of the lock.

2008-08-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/resource.c (ListMagickResourceInfo): Include quantum
	depth, bits per pixel, and process address size in resource
	output so that output is more complete.

2008-07-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* version.sh: GraphicsMagick 1.2.5 released.
	* NEWS.txt: Updated news for release.

2008-07-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* wand/Makefile.am (WAND_TESTS): Added Wand drawtest and wandtest
	to automated test suite.

2008-07-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/effect.c (ThresholdImage): Backport implementation from
	HEAD.
	* coders/tiff.c (CompressionSupported): Use
	TIFFIsCODECConfigured() to test if a codec is supported.
	* tests/{rwblob.c, rwfile.c}: use DestroyImageList() rather than
	DestroyImage().

2008-07-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/blob.c (DestroyBlob, DestroyBlobInfo): Implementation is
	a bit more robust.

2008-07-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/jpeg.c (ReadJPEGImage): Remove over-write of
	image->client_data.  Resolves SourceForge issue [ 2018974 ]
	client_data is not passed to streamhandler.
	* coders/png.c (WriteOnePNGImage): Fix crash when writing PNG
	images with transparency and either type Optimize is requested, or
	the image is colormapped.
