@@ -24,6 +24,8 @@
 2008-09-09  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
+  <LI> magick/shear.c (IntegralRotateImage): Add missing progress
+        indication for 90 and 270 degrees rotation.
   <LI> www/perl.html: Fix formatting of examples.  Should address
         SourceForge issue [ 2100339 ] "Wrong format in example script on
         web page".
